--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="container">
         <div class="contact-block">
             <a href="mailto:info@jsc-ltd.ru" class="email-header">info@jsc-ltd.ru</a>
-            <div class="logo"><img src="./img/logo.svg"></div>
+            <div class="logo"><img src="../../img/logo.svg"></div>
             <div class="phones">
-                <a href="tel:+79036263761" class="phone-link"><img src="./img/phone-call.png"> +7(903)62-63-761</a>
-                <a href="tel:+79036263761" class="phone-link"><img src="./img/whatsapp.png">+7(903)62-63-761</a>
+                <a href="tel:+79036263761" class="phone-link"><img src="../../img/phone-call.png"> +7(903)62-63-761</a>
+                <a href="tel:+79036263761" class="phone-link"><img src="../../img/whatsapp.png">+7(903)62-63-761</a>
                 <a href="call-back">Перезвоните мне</a>
             </div>
         </div>
@@ -35,25 +35,25 @@
         <div class="form-block">
             <ul uk-accordion="multiple: true" class="uk-width-1-2 uk-margin-large-left">
               <li >
-                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Команда профессионалов.</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span class="underline">Команда профессионалов.</span></a>
                   <div class="uk-accordion-content">
                       <p>Наша команда имеет опыт юридической работы по многочисленным направлениям более 18 лет.</p>
                   </div>
               </li>
               <li>
-                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Работаем под ключ</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span class="underline">Работаем под ключ</span></a>
                   <div class="uk-accordion-content">
                       <p>Наш багаж знаний и опыта позволяет нашим Клиентам быть уверенными в осуществлении полного комплекса услуг, необходимых для достижения преследуемого результата.</p>
                   </div>
               </li>
               <li>
-                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Мы сэкономим не только Ваши деньги,<br/> но и Ваше время</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span class="underline">Мы сэкономим не только Ваши деньги,<br/> но и Ваше время</span></a>
                   <div class="uk-accordion-content">
                       <p>Отработанные на протяжении многолетней практики алгоритмы, позволяют нам достигать поставленных целей в максимально сжатые сроки и не упускать из вида мелких деталей важных для Клиента, даже если он о них не задумывается.</p>
                   </div>
               </li>
               <li>
-                <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span>Гарантия результата.</span></a>
+                <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span class="underline">Гарантия результата.</span></a>
                 <div class="uk-accordion-content">
                     <p>Наша нацеленность на защиту всех без исключения интересов Клиентов, даже тех, о которым о не догадывается сам, и наша инициативность при оказании услуг позволяет нам порой достигать результата, о котором Клиент даже не догадывался до посещения нашего офиса.</p>
                 </div>
@@ -110,25 +110,25 @@
                 </ul>
                 <ul uk-accordion="multiple: true" class="mob-list-left uk-hidden@m">
                   <li>
-                      <a class="uk-accordion-title uk-text-emphasis title-mob-size underline" href="#">1.	ЕСЛИ ЦЕЛЬ – ЧТО-ТО ВЗЯТЬ В АРЕНДУ >></a>
+                      <a class="uk-accordion-title uk-text-emphasis title-mob-size " href="#">1.	ЕСЛИ ЦЕЛЬ – ЧТО-ТО ВЗЯТЬ В АРЕНДУ >></a>
                       <div class="uk-accordion-content">
                         <span class='title-xl'>Сопровождение участия Клиентов в торгах организуемых городом за право аренды помещения/зданий, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП</li><li>регистрацию на порталах</li><li>мониторинг информационных ресурсов</li><li>направление заявки на участие</li><li>непосредственное участие в торгах;</li><li>регистрацию договора аренды после его заключения по результатам проведения торгов</li></ul>
                       </div>
                   </li>
                   <li>
-                      <a class="uk-accordion-title uk-text-emphasis title-mob-size underline" href="#">2.	ЕСЛИ ЦЕЛЬ – ПРОДЛИТЬ АРЕНДУ >></a>
+                      <a class="uk-accordion-title uk-text-emphasis title-mob-size " href="#">2.	ЕСЛИ ЦЕЛЬ – ПРОДЛИТЬ АРЕНДУ >></a>
                       <div class="uk-accordion-content">
                         <span class='title-xl'>Юридическое сопровождение пролонгации арендных отношений с ДГИ г. Москвы, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП</li><li>регистрацию на порталах</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получение проекта доп. соглашения к договору аренды</li><li>регистрацию доп. соглашения</li></ul>
                       </div>
                   </li>
                   <li>
-                      <a class="uk-accordion-title uk-text-emphasis title-mob-size underline" href="#">3.	ЕСЛИ ЦЕЛЬ – ПОЛУЧИТЬ ЛЬГОТУ ПО АРЕНДЕ >></a>
+                      <a class="uk-accordion-title uk-text-emphasis title-mob-size " href="#">3.	ЕСЛИ ЦЕЛЬ – ПОЛУЧИТЬ ЛЬГОТУ ПО АРЕНДЕ >></a>
                       <div class="uk-accordion-content">
                         <span class='title-xl'>Юридическое сопровождение получения льготной арендной ставки, включающее:</span><ul class='uk-padding-small'><li>организацию получения ЭЦП</li><li>регистрацию на порталах</li><li>подбор комплекта документов в обоснование льготы</li><li>направление соответствующего обращения в ДГИ г. Москвы</li><li>получения уведомления о ставке арендной платы</li></ul>
                       </div>
                   </li>
                   <li>
-                    <a class="uk-accordion-title uk-text-emphasis title-mob-size underline" href="#">4.	ЕСЛИ ЦЕЛЬ – ВЫКУПИТЬ >></a>
+                    <a class="uk-accordion-title uk-text-emphasis title-mob-size " href="#">4.	ЕСЛИ ЦЕЛЬ – ВЫКУПИТЬ >></a>
                     <div class="uk-accordion-content">
                       <ul class='uk-padding-small'><li>Юридическое сопровождение реализации преимущественного права выкупа МСП, включающее организацию получения ЭЦП, регистрацию на порталах, подбор комплекта документов, направление соответствующего обращения в ДГИ г. Москвы, получение проекта договора купли-продажи, регистрацию договора купли-продажи</li><li>Юридическое сопровождение оспаривания отказа в реализации преимущественного права в судебном порядке</li><li>Юридическое сопровождение оспаривания цены объекта, предлагаемой ДГИ г. Москвы, а также других положений договора купли-продажи, необоснованно навязываемых МСП и влекущих для него дополнительные расходы и обязанности, в судебном порядке</li></ul>
                     </div>
@@ -153,25 +153,35 @@
                 </ul>
                 <ul uk-accordion="multiple: true" class="mob-list-right uk-hidden@m">
                   <li>
-                      <a class="uk-accordion-title uk-text-emphasis title-mob-size underline" href="#">1.	ЕСЛИ ЦЕЛЬ МИНИМИЗТРОВАТЬ РИСКИ ПРИ ПРОДАЖЕ ОБЪЕКТА >></a>
+                      <a class="uk-accordion-title uk-text-emphasis title-mob-size" href="#">1.	ЕСЛИ ЦЕЛЬ МИНИМИЗТРОВАТЬ РИСКИ ПРИ ПРОДАЖЕ ОБЪЕКТА >></a>
                       <div class="uk-accordion-content">
-                        <span class='title-xl'>Юридическое сопровождение оформления сделки:</span><ul class='uk-padding-small'><li>участие в переговорах Клиентов с контрагентами</li><li>проверка полномочий подписантов</li><li>проверка соблюдения покупателем процедур корпоративного одобрения сделки</li><li>анализ возможных перспектив оспаривания сделки третьими лицами, в том числе рисков банкротства покупателя</li><li>планирование и выстраивание безопасной схемы взаиморасчетов (аккредитив/банковские ячейки)</li><li>подготовка проектов договоров/документов и представление комплекта документов для государственной регистрации перехода права собственности (в том числе сопровождение процедур у нотариуса)</li></ul>
+                        <span class='title-xl'>Юридическое сопровождение оформления сделки:</span><ul class='uk-padding-small'><li class="underline">участие в переговорах Клиентов с контрагентами</li><li>проверка полномочий подписантов</li><li>проверка соблюдения покупателем процедур корпоративного одобрения сделки</li><li>анализ возможных перспектив оспаривания сделки третьими лицами, в том числе рисков банкротства покупателя</li><li>планирование и выстраивание безопасной схемы взаиморасчетов (аккредитив/банковские ячейки)</li><li>подготовка проектов договоров/документов и представление комплекта документов для государственной регистрации перехода права собственности (в том числе сопровождение процедур у нотариуса)</li></ul>
                       </div>
                   </li>
                   <li>
-                      <a class="uk-accordion-title uk-text-emphasis title-mob-size underline" href="#">2.	ЕСЛИ ЦЕЛЬ МИНИМИЗТРОВАТЬ РИСКИ ПРИ ПОКУПКЕ ОБЪЕКТА >></a>
+                      <a class="uk-accordion-title uk-text-emphasis title-mob-size" href="#">2.	ЕСЛИ ЦЕЛЬ МИНИМИЗТРОВАТЬ РИСКИ ПРИ ПОКУПКЕ ОБЪЕКТА >></a>
                       <div class="uk-accordion-content">
                         <span class='title-xl'>Юридическое сопровождение оформления сделки:</span><ul class='uk-padding-small'><li>участие в переговорах Клиентов с контрагентами</li><li>изучение истории объекта недвижимости и деловой репутации контрагентов</li><li>проверка полномочий подписантов</li><li>проверка соблюдения продавцом процедур корпоративного одобрения сделки</li><li>анализ возможных перспектив оспаривания сделки третьими лицами, в том числе бывшими собственниками объекта</li><li>анализ возможных рисков банкротства продавца</li><li>планирование и выстраивание безопасной схемы взаиморасчетов</li><li>подготовка проектов договоров/документов и представление комплекта документов для государственной регистрации перехода права собственности</li></ul>
                       </div>
                   </li>
                   <li>
-                      <a class="uk-accordion-title uk-text-emphasis title-mob-size underline" href="#">3.	ЕСЛИ ЦЕЛЬ СДАТЬ ИМУЩЕСТВО В АРЕНДУ >></a>
+                      <a class="uk-accordion-title uk-text-emphasis title-mob-size" href="#">3.	ЕСЛИ ЦЕЛЬ СДАТЬ ИМУЩЕСТВО В АРЕНДУ >></a>
                       <div class="uk-accordion-content">
                         <span class='title-xl'>Юридическое сопровождение оформления сделки:</span><ul class='uk-padding-small'><li>участие в переговорах Клиента с потенциальными арендаторами</li><li>составление/рецензирование проектов договоров/документов</li><li>представление комплекта документов для государственной регистрации длительных арендных отношений</li><li>юридическое сопровождение переписки и расторжения договоров аренды с проблемными арендаторами</li><li>взыскание задолженности по арендным и эксплуатационным платежам</li><li>общий комплексный контроль исполнения арендаторами своих обязательств на протяжении всего периода аренды</li></ul>
                       </div>
                   </li>
               </ul>
             </div>
+        </div>
+    </div>
+</div>
+			<div class="banner-section">
+    <div class="container">
+        <div class="main-banner-block">
+            <div class="title">ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</div>
+            <div class="subtitle">Наш специалист перезвонит Вам в течение 10 минут
+            </div>
+            <button>Оставить заявку</button>
         </div>
     </div>
 </div>
@@ -191,7 +201,7 @@
                         </div>
                     </li>
                 </ul>
-                <img src="./img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title uk-visible@m" uk-tooltip="title: <span class='window-descr'>Мы готовы предоставим Вам бесплатную первую устную консультацию</span>; pos: bottom">
@@ -205,7 +215,7 @@
                         </div>
                     </li>
                 </ul>
-                <img src="./img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title uk-visible@m" uk-tooltip="title: <ul class='list'><li>Первичная консультация – бесплатно</li><li>Ведение дела по иску ДГИ г. Москвы к Клиенту – от 25 000 рублей</li><li>Ведение дела по иску Клиента к ДГИ г. Москвы – от 100 000 рублей</li><li>Юридическое сопровождение сделок с коммерческой недвижимостью – от 50 000 рублей</li><li>Услуги, связанные с участием в торгах – от 30 000 рублей</li><li>Переписка с ДГИ г. Москвы, в том числе по вопросам льготной ставки – от 25 000 рублей</li></ul>; pos: bottom">
@@ -219,7 +229,7 @@
                         </div>
                     </li>
                 </ul>
-                <img src="./img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
         </div>
     </div>
