--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="container">
         <div class="contact-block">
             <a href="mailto:info@jsc-ltd.ru" class="email-header">info@jsc-ltd.ru</a>
-            <div class="logo"><img src="./img/logo.svg"></div>
+            <div class="logo"><img src="../../img/logo.svg"></div>
             <div class="phones">
-                <a href="tel:+79036263761" class="phone-link"><img src="./img/phone-call.png"> +7(903)62-63-761</a>
-                <a href="tel:+79036263761" class="phone-link"><img src="./img/whatsapp.png">+7(903)62-63-761</a>
+                <a href="tel:+79036263761" class="phone-link"><img src="../../img/phone-call.png"> +7(903)62-63-761</a>
+                <a href="tel:+79036263761" class="phone-link"><img src="../../img/whatsapp.png">+7(903)62-63-761</a>
                 <a href="call-back">Перезвоните мне</a>
             </div>
         </div>
@@ -35,25 +35,25 @@
         <div class="form-block">
             <ul uk-accordion="multiple: true" class="uk-width-1-2 uk-margin-large-left">
               <li >
-                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span class="underline">Команда профессионалов.</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span class="underline">Команда профессионалов.</span></a>
                   <div class="uk-accordion-content">
                       <p>Наша команда имеет опыт юридической работы по многочисленным направлениям более 18 лет.</p>
                   </div>
               </li>
               <li>
-                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span class="underline">Работаем под ключ</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span class="underline">Работаем под ключ</span></a>
                   <div class="uk-accordion-content">
                       <p>Наш багаж знаний и опыта позволяет нашим Клиентам быть уверенными в осуществлении полного комплекса услуг, необходимых для достижения преследуемого результата.</p>
                   </div>
               </li>
               <li>
-                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span class="underline">Мы сэкономим не только Ваши деньги,<br/> но и Ваше время</span></a>
+                  <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span class="underline">Мы сэкономим не только Ваши деньги,<br/> но и Ваше время</span></a>
                   <div class="uk-accordion-content">
                       <p>Отработанные на протяжении многолетней практики алгоритмы, позволяют нам достигать поставленных целей в максимально сжатые сроки и не упускать из вида мелких деталей важных для Клиента, даже если он о них не задумывается.</p>
                   </div>
               </li>
               <li>
-                <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="./img/tick.png" class="uk-margin-right"><span class="underline">Гарантия результата.</span></a>
+                <a class="uk-accordion-title uk-flex uk-flex-row text-size-xl" href="#"><img src="../../img/tick.png" class="uk-margin-right"><span class="underline">Гарантия результата.</span></a>
                 <div class="uk-accordion-content">
                     <p>Наша нацеленность на защиту всех без исключения интересов Клиентов, даже тех, о которым о не догадывается сам, и наша инициативность при оказании услуг позволяет нам порой достигать результата, о котором Клиент даже не догадывался до посещения нашего офиса.</p>
                 </div>
@@ -107,6 +107,9 @@
                     <li class="accordion-item">
                       <span uk-tooltip="title: <ul class='uk-padding-small'><li>Юридическое сопровождение реализации преимущественного права выкупа МСП, включающее организацию получения ЭЦП, регистрацию на порталах, подбор комплекта документов, направление соответствующего обращения в ДГИ г. Москвы, получение проекта договора купли-продажи, регистрацию договора купли-продажи</li><li>Юридическое сопровождение оспаривания отказа в реализации преимущественного права в судебном порядке</li><li>Юридическое сопровождение оспаривания цены объекта, предлагаемой ДГИ г. Москвы, а также других положений договора купли-продажи, необоснованно навязываемых МСП и влекущих для него дополнительные расходы и обязанности, в судебном порядке</li></ul>; pos: right" aria-expanded="false">4.	ЕСЛИ ЦЕЛЬ – ВЫКУПИТЬ >></span></span>
                     </li>
+                    <li>
+                      <a href="https://jsc-ltd.ru/kommercheskiy-shchit-nedvizhimosti.php" class="link">Cсылка</a>
+                    </li>
                 </ul>
                 <ul uk-accordion="multiple: true" class="mob-list-left uk-hidden@m">
                   <li>
@@ -132,6 +135,9 @@
                     <div class="uk-accordion-content">
                       <ul class='uk-padding-small'><li>Юридическое сопровождение реализации преимущественного права выкупа МСП, включающее организацию получения ЭЦП, регистрацию на порталах, подбор комплекта документов, направление соответствующего обращения в ДГИ г. Москвы, получение проекта договора купли-продажи, регистрацию договора купли-продажи</li><li>Юридическое сопровождение оспаривания отказа в реализации преимущественного права в судебном порядке</li><li>Юридическое сопровождение оспаривания цены объекта, предлагаемой ДГИ г. Москвы, а также других положений договора купли-продажи, необоснованно навязываемых МСП и влекущих для него дополнительные расходы и обязанности, в судебном порядке</li></ul>
                     </div>
+                  </li>
+                  <li>
+                    <a href="https://jsc-ltd.ru/kommercheskiy-shchit-nedvizhimosti.php" class="link">Cсылка</a>
                   </li>
               </ul>
             </div>
@@ -175,16 +181,6 @@
         </div>
     </div>
 </div>
-			<div class="banner-section">
-    <div class="container">
-        <div class="main-banner-block">
-            <div class="title">ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</div>
-            <div class="subtitle">Наш специалист перезвонит Вам в течение 10 минут
-            </div>
-            <button>Оставить заявку</button>
-        </div>
-    </div>
-</div>
 			<div class="price-section">
     <div class="container">
         <div class="title">Наша ценовая политика</div>
@@ -201,7 +197,7 @@
                         </div>
                     </li>
                 </ul>
-                <img src="./img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title uk-visible@m" uk-tooltip="title: <span class='window-descr'>Мы готовы предоставим Вам бесплатную первую устную консультацию</span>; pos: bottom">
@@ -215,7 +211,7 @@
                         </div>
                     </li>
                 </ul>
-                <img src="./img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
             <div class="card">
                 <div class="title uk-visible@m" uk-tooltip="title: <ul class='list'><li>Первичная консультация – бесплатно</li><li>Ведение дела по иску ДГИ г. Москвы к Клиенту – от 25 000 рублей</li><li>Ведение дела по иску Клиента к ДГИ г. Москвы – от 100 000 рублей</li><li>Юридическое сопровождение сделок с коммерческой недвижимостью – от 50 000 рублей</li><li>Услуги, связанные с участием в торгах – от 30 000 рублей</li><li>Переписка с ДГИ г. Москвы, в том числе по вопросам льготной ставки – от 25 000 рублей</li></ul>; pos: bottom">
@@ -229,8 +225,18 @@
                         </div>
                     </li>
                 </ul>
-                <img src="./img/arrow_icon.svg" alt="arrow">
+                <img src="../../img/arrow_icon.svg" alt="arrow">
             </div>
+        </div>
+    </div>
+</div>
+			<div class="banner-section">
+    <div class="container">
+        <div class="main-banner-block">
+            <div class="title">ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</div>
+            <div class="subtitle">Наш специалист перезвонит Вам в течение 10 минут
+            </div>
+            <button>Оставить заявку</button>
         </div>
     </div>
 </div>
